# Clean-Master-Privacy

./: Cargo.toml  LICENSE  README.md  build.sh  install.sh
.github/workflows/: Release.yml
assets/: clean-master-privacy.desktop
src/: core.rs  lib.rs  main.rs  ui.rs
